feat(agent): add markdown-based agent switching